--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.box
+    {
+        background-color: grey;
+    }
+
 .userform
     {
         float: left;
@@ -102,3 +107,34 @@ img#picture{
 		float: left;
 		padding: 10px 10px 10px 0;
 		}
+
+input[type=text], select {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 5px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4C7AFC;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #3E62C8;
+}
+
+.form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
