--- a/style.css
+++ b/style.css
@@ -125,6 +125,6 @@ input[type=submit]:hover {
 
 .form {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: orange;
     padding: 20px;
 }
